Service Modle Complete

--- a/index.html
+++ b/index.html
@@ -535,14 +535,14 @@
                         <h3 class="services__title">Ui/Ux <br> Designer</h3>
                     </div>
 
-                    <span class="button button--flex button-small button--link services__button">
+                    <span class="button button--flex button--small button--link services__button">
                         View More
                         <i class="uil uil-arrow-right button__icon"></i>
                     </span>
 
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-modal-title">Ui/Ux <br> Designer</h4>
+                            <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
                             <i class="uil uil-times services__modal-close"></i>
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
@@ -587,7 +587,7 @@
 
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-modal-title">Frontend <br> Developer</h4>
+                            <h4 class="services__modal-title">Frontend <br> Developer</h4>
                             <i class="uil uil-times services__modal-close"></i>
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
@@ -632,7 +632,7 @@
 
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-modal-title">Branding<br>Designer</h4>
+                            <h4 class="services__modal-title">Branding<br>Designer</h4>
                             <i class="uil uil-times services__modal-close"></i>
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
