--- a/index.html
+++ b/index.html
@@ -663,14 +663,60 @@
                         </div>
                     </div>
                 </div>
-
-                
             </div>
         </section>
 
         <!--==================== PORTFOLIO ====================-->
         <section class="portfolio section" id="portfolio">
+            <h2 class="section__title">Portfolio</h2>
+            <span class="section__subtitle">Most recent work</span>
 
+            <div class="portfolio__container container swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <!--==================== PORTFOLIO 1====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/project1.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Marketing Website</h3>
+                            <p class="portfolio__description">Website adaptable to all devices,with ui components.</p>
+                            <a href="https://www.ramax.media/"
+                                class="button button--flex button--small portfolio__button">
+                                demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--==================== PORTFOLIO 2====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/project2.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Snapchat lens Creator </h3>
+                            <p class="portfolio__description">Snapchat lens Creator Website adaptable to all
+                                devices,with ui components.</p>
+                            <a href="https://vishucreation.com/"
+                                class="button button--flex button--small portfolio__button">
+                                demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Add Arrows-->
+                <div class="swiper-button-next">
+                    <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-button-prev">
+                    <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+
+                </div>
+                 
+                <!-- Add pagination -->
+                <div class="swiper-pagination"></div>
+            </div>
         </section>
 
         <!--==================== PROJECT IN MIND ====================-->
