--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                         </div>
                     </div>
                 </div>
-            
+
 
                 <!--Add Arrows-->
                 <div class="swiper-button-next">
@@ -713,7 +713,7 @@
                 <div class="swiper-button-prev">
                     <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
                 </div>
-                 
+
                 <!-- Add pagination -->
                 <div class="swiper-pagination"></div>
             </div>
@@ -721,7 +721,20 @@
 
         <!--==================== PROJECT IN MIND ====================-->
         <section class="project section">
+            <div class="project__bg">
+                <div class="project__container container grid">
+                    <div class="project__data">
+                        <h2 class="project__title">You have a new project.</h2>
+                        <p class="project__description">Contact me now and get a 30% discount on your new project.</p>
+                        <a href="#contact" class="button button--flex button--white">
+                            Contact me
+                            <i class="uil uil-message project__icon button__icon"></i>
+                        </a>
+                    </div>
 
+                    <img src="assets/img/project.png" alt="" class="project__img">
+                </div>
+            </div>
         </section>
 
         <!--==================== TESTIMONIAL ====================-->
