--- a/index.html
+++ b/index.html
@@ -739,7 +739,92 @@
 
         <!--==================== TESTIMONIAL ====================-->
         <section class="testimonial section">
+            <h2 class="section__title">Testimonial</h2>
+            <span class="section__subtitle">My client saying</span>
+            <div class="testimonial__container container swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <!--==================== TESTIMONIAL 1====================-->
+                    <div class="testimonial__content swiper-slide">
+                        <div class="testimonial__data ">
+                            <div class="testimonial__header">
+                                <img src="/assets/img/testimonial1.jpg" alt="" class="testimonial__img">
 
+                                <div>
+                                    <h3 class="testimonial__name">Rahul Canada</h3>
+                                    <span class="testimonial__client">Client</span>
+                                </div>
+                            </div>
+
+                            <div>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                            </div>
+                        </div>
+
+                        <p class="testimonial__description">I get a good impression, I carry
+                            out my project with all the possible quality and attention and
+                            support 24 hours a day.</p>
+                    </div>
+
+                    <!--==================== TESTIMONIAL 2====================-->
+                    <div class="testimonial__content swiper-slide">
+                        <div class="testimonial__data ">
+                            <div class="testimonial__header">
+                                <img src="/assets/img/testimonial2.jpg" alt="" class="testimonial__img">
+
+                                <div>
+                                    <h3 class="testimonial__name">Vishal Saini</h3>
+                                    <span class="testimonial__client">Client</span>
+                                </div>
+                            </div>
+
+                            <div>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                            </div>
+                        </div>
+
+                        <p class="testimonial__description">I get a good impression, I carry
+                            out my project with all the possible quality and attention and
+                            support 24 hours a day.</p>
+                    </div>
+
+                    <!--==================== TESTIMONIAL 3====================-->
+                    <div class="testimonial__content swiper-slide">
+                        <div class="testimonial__data ">
+                            <div class="testimonial__header">
+                                <img src="/assets/img/testimonial3.jpg" alt="" class="testimonial__img">
+
+                                <div>
+                                    <h3 class="testimonial__name">Jeet</h3>
+                                    <span class="testimonial__client">Client</span>
+                                </div>
+                            </div>
+
+                            <div>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                                <i class="uil uil-star testimonial__icon-star"></i>
+                            </div>
+                        </div>
+
+                        <p class="testimonial__description">I get a good impression, I carry
+                            out my project with all the possible quality and attention and
+                            support 24 hours a day.</p>
+                    </div>
+                </div>
+                <!-- add paginaton -->
+                <div class="swiper-pagination swiper-pagination-testimonial"></div>
+            </div>
+            </div>
         </section>
 
         <!--==================== CONTACT ME ====================-->
@@ -758,6 +843,7 @@
 
     <!--==================== SWIPER JS ====================-->
     <script src="/assets/js/swiper-bundle.min.js"></script>
+    
 
     <!--==================== MAIN JS ====================-->
     <script src="/assets/js/main.js"></script>
