--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="/assets/pdf/Alexa-Cv.pdf" class="button button--flex"></a>Download CV
+                        <a download="" href="/assets/pdf/Alexa-Cv.pdf" class="button button--flex">Download CV
                         <i class="uil uil-download-alt button__icon"></i>
+                    </a>
                     </div>
                 </div>
             </div>
@@ -829,7 +830,70 @@
 
         <!--==================== CONTACT ME ====================-->
         <section class="contact section" id="contact">
+           <h2 class="section__title">Contact me</h2>
+           <span class="section__subtitle">Get inn touch</span>
 
+           <div class="contact__container container grid">
+            <div>
+                <div class="contact__information">
+                    <i class="uil uil-phone contact__icon"></i>
+
+                    <div>
+                        <h3 class="contact__title">Call me</h3>
+                        <span class="contact__subtitle">91+9996407289</span>
+                    </div>
+                </div>
+
+                <div class="contact__information">
+                    <i class="uil uil-envelope contact__icon"></i>
+
+                    <div>
+                        <h3 class="contact__title">Gmail</h3>
+                        <span class="contact__subtitle">parasgrover932@gmail.com</span>
+                    </div>
+                </div>
+
+                <div class="contact__information">
+                    <i class="uil uil-map-marker contact__icon"></i>
+
+                    <div>
+                        <h3 class="contact__title">Location</h3>
+                        <span class="contact__subtitle">Sonipat (Haryana)</span>
+                    </div>
+                </div>
+            </div>
+
+            <form action="" class="contact__form grid"></form>
+            <div class="contact__inputs grid">
+                <div class="contact__content">
+                    <label for="" class="contact__lable">Name</label>
+                    
+                    <input type="text" class="contact__input">
+                </div>
+
+                <div class="contact__content">
+                    <label for="" class="contact__lable">Email</label>
+                    <input type="email" class="contact__input">
+                </div>
+
+                <div class="contact__content">
+                    <label for="" class="contact__lable">Project</label>
+                    <input type="text" class="contact__input">
+                </div>
+
+                <div class="contact__content">
+                    <label for="" class="contact__lable">Message</label>
+                    <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                </div>
+
+                <div>
+                    <a href="" class="button button--flex">
+                        Send Message
+                        <i class="uil uil-message button__icon"></i>
+                    </a>
+                </div>
+            </div>
+           </div>
         </section>
     </main>
 
