add testimonial img

--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data ">
                             <div class="testimonial__header">
-                                <img src="/assets/img/testimonial1.jpg" alt="" class="testimonial__img">
+                                <img src="/assets/img/vishal.png" alt="" class="testimonial__img">
 
                                 <div>
                                     <h3 class="testimonial__name">Rahul Canada</h3>
