--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data ">
                             <div class="testimonial__header">
-                                <img src="/assets/img/testimonial3.jpg" alt="" class="testimonial__img">
+                                <img src="/assets/img/jeet.png" alt="" class="testimonial__img">
 
                                 <div>
                                     <h3 class="testimonial__name">Jeet</h3>
