--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="/assets/pdf/Alexa-Cv.pdf" class="button button--flex">Download CV
+                        <a download="" href="/assets/pdf/Paras-Cv.pdf" class="button button--flex">Download CV
                         <i class="uil uil-download-alt button__icon"></i>
                     </a>
                     </div>
@@ -683,7 +683,9 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Marketing Website</h3>
-                            <p class="portfolio__description">Website adaptable to all devices,with ui components.</p>
+                            <p class="portfolio__description">Canada's top influencer marketing platform
+                                 for campaigns on Facebook, Instagram, YouTube, TikTok, Snapchat and more.
+                                  facebook Instagram twitter.</p>
                             <a href="https://www.ramax.media/"
                                 class="button button--flex button--small portfolio__button">
                                 demo
@@ -698,7 +700,7 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Snapchat lens Creator </h3>
-                            <p class="portfolio__description">Snapchat lens Creator Website adaptable to all
+                            <p class="portfolio__description">Snapchat lens & develop AR & VR Website adaptable to all
                                 devices,with ui components.</p>
                             <a href="https://vishucreation.com/"
                                 class="button button--flex button--small portfolio__button">
@@ -834,7 +836,7 @@
         <!--==================== CONTACT ME ====================-->
         <section class="contact section" id="contact">
            <h2 class="section__title">Contact me</h2>
-           <span class="section__subtitle">Get inn touch</span>
+           <span class="section__subtitle">Get in touch</span>
 
            <div class="contact__container container grid">
             <div>
@@ -906,7 +908,7 @@
         <div class="footer__container container grid">
             <div>
                 <h1 class="footer__title">Prince Grover</h1>
-                <span class="footer__subtitle">Frontend developer</span>
+                <span class="footer__subtitle">Fullstack developer</span>
             </div>
 
             <ul class="footer__links">
