--- a/index.html
+++ b/index.html
@@ -551,17 +551,17 @@
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I develop the user interface</p>
+                                    <p>I design the user interface.</p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Web page development.</p>
+                                    <p>i design the Website page's</p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I develop the user interface.</p>
+                                    <p>I design the mobile App interface..</p>
                                 </li>
 
                                 <li class="services__modal-service">
@@ -581,7 +581,7 @@
                 <div class="services__content">
                     <div>
                         <i class="uil uil-arrow services__icon"></i>
-                        <h3 class="services__title">Frontend <br> Developer</h3>
+                        <h3 class="services__title">Website <br> Developer</h3>
                     </div>
 
                     <span class="button button--flex button-small button--link services__button">
@@ -591,7 +591,7 @@
 
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-title">Frontend <br> Developer</h4>
+                            <h4 class="services__modal-title">Website <br> Developer</h4>
                             <i class="uil uil-times services__modal-close"></i>
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
@@ -601,22 +601,22 @@
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Web page development.</p>
+                                    <p> I develop the Responsive Website's.</p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I develop the user interface.</p>
+                                    <p>I develop the SCO friendly website's.</p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I Create Ux element interactions.</p>
+                                    <p>I develop the attractive website.</p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I position your company brand.</p>
+                                    <p>I provide the 24/7 support..</p>
                                 </li>
                             </ul>
                         </div>
@@ -721,7 +721,7 @@
                 </div>
 
                 <!-- Add pagination -->
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination adjust"></div>
             </div>
         </section>
 
