--- a/index.html
+++ b/index.html
@@ -205,10 +205,20 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">CSS</h3>
-                                    <span class="skills__number">70%</span>
+                                    <span class="skills__number">90%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__CSS"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">SCSS</h3>
+                                    <span class="skills__number">90%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__tailwind"></span>
                                 </div>
                             </div>
 
@@ -235,7 +245,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">react</h3>
-                                    <span class="skills__number">30%</span>
+                                    <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__react"></span>
@@ -453,11 +463,12 @@
                         <!--==================== QUALIFICATION 1====================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Frontend Developer</h3>
-                                <span class="qualification__subtitle">Html,CSS,JS,React - YouTube</span>
+                                <h3 class="qualification__title">Web Developer Internship</h3>
+                                <span class="qualification__subtitle">React js
+                                    - Sonfocus Solution PVT.LTD</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2018-2022
+                                    2023-Present
                                 </div>
                             </div>
 
@@ -469,18 +480,18 @@
 
                         <!--==================== QUALIFICATION 2====================-->
                         <div class="qualification__data">
-                            <div></div>
-
+                            <span></span>
                             <div>
                                 <span class="qualification__rounder"></span>
                                 <span class="qualification__line"></span>
                             </div>
                             <div>
-                                <h3 class="qualification__title">UI/UX</h3>
-                                <span class="qualification__subtitle">Figma - YouTube</span>
+                                <h3 class="qualification__title">Frontend Developer</h3>
+                                <span class="qualification__subtitle">Html, CSS, JS, React, SCSS, Tailwind CSS, Bootsrap
+                                    - YouTube</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2021-2022
+                                    2018-2022
                                 </div>
                             </div>
 
@@ -489,6 +500,30 @@
 
                         <!--==================== QUALIFICATION 3====================-->
                         <div class="qualification__data">
+
+
+                            <div>
+                                <h3 class="qualification__title">UI/UX</h3>
+                                <span class="qualification__subtitle">Figma - YouTube</span>
+                                <div class="qualification__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2021-2022
+                                </div>
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <!-- <span class="qualification__line"></span> -->
+                            </div>
+
+                        </div>
+
+                        <!-- ==================== QUALIFICATION 4==================== -->
+                        <!-- <div class="qualification__data">
+                            <span></span>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
                             <div>
                                 <h3 class="qualification__title">Backend development</h3>
                                 <span class="qualification__subtitle">Nodejs - YouTube</span>
@@ -498,30 +533,24 @@
                                 </div>
                             </div>
 
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
-                        </div>
 
-                        <!--==================== QUALIFICATION 4====================-->
-                        <div class="qualification__data">
-                            <div></div>
+                        </div> -->
 
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <!-- <span class="qualification__line"></span> -->
-                            </div>
-
+                        <!--==================== QUALIFICATION 5====================-->
+                        <!-- <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Web design</h3>
-                                <span class="qualification__subtitle">Figma - YouTube</span>
+                                <span class="qualification__subtitle">Responsive Design - YouTube</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
                                     2017-2018
                                 </div>
                             </div>
-                        </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -597,22 +626,22 @@
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I develop the user interface</p>
+                                    <p>I develope the user interface</p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p> I develop the Responsive Website's.</p>
+                                    <p> I develope the Responsive Website's.</p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I develop the SCO friendly website's.</p>
+                                    <p>I develope the SCO friendly website's.</p>
                                 </li>
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I develop the attractive website.</p>
+                                    <p>I develope the attractive website.</p>
                                 </li>
 
                                 <li class="services__modal-service">
@@ -642,7 +671,7 @@
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I develop the user interface</p>
+                                    <p>I develope the user interface</p>
                                 </li>
 
                                 <li class="services__modal-service">
@@ -652,7 +681,7 @@
 
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I develop the user interface.</p>
+                                    <p>I develope the user interface.</p>
                                 </li>
 
                                 <li class="services__modal-service">
@@ -787,9 +816,11 @@
                             </div>
                         </div>
 
-                        <p class="testimonial__description">I get a good impression, I carry
-                            out my project with all the possible quality and attention and
-                            support 24 hours a day.</p>
+                        <p class="testimonial__description">Working with Paras and their streaming web app has been an
+                            amazing experience! The attention to detail and commitment to quality is evident in every
+                            aspect of the project. Moreover, their 24-hour support ensures that any issues or questions
+                            are promptly addressed. I highly recommend their services to anyone seeking a reliable and
+                            exceptional streaming platform.</p>
                     </div>
 
                     <!--==================== TESTIMONIAL 2====================-->
@@ -813,9 +844,11 @@
                             </div>
                         </div>
 
-                        <p class="testimonial__description">I get a good impression, I carry
-                            out my project with all the possible quality and attention and
-                            support 24 hours a day.</p>
+                        <p class="testimonial__description">Paras has truly exceeded my expectations with their
+                            streaming web app. The attention to detail and dedication to delivering a high-quality
+                            product is unmatched. With their round-the-clock support, I have never felt alone in this
+                            project. I am grateful to have found a partner who not only delivers excellence but also
+                            provides unwavering support throughout. Highly recommended</p>
                     </div>
 
                     <!--==================== TESTIMONIAL 3====================-->
@@ -839,9 +872,12 @@
                             </div>
                         </div>
 
-                        <p class="testimonial__description">I get a good impression, I carry
-                            out my project with all the possible quality and attention and
-                            support 24 hours a day.</p>
+                        <p class="testimonial__description">I am thrilled to have chosen Paras and their streaming web
+                            app for my project. The level of expertise and professionalism they bring is outstanding.
+                            From the initial development stages to ongoing support, they have been there every step of
+                            the way, ensuring a seamless and impressive streaming experience. With their 24-hour
+                            availability, I feel confident knowing that my project is in capable hands. Thank you,
+                            Paras, for your exceptional work!</p>
                     </div>
                 </div>
                 <!-- add paginaton -->
