--- a/index.html
+++ b/index.html
@@ -755,8 +755,62 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                    <!--==================== PORTFOLIO 4====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/stream.png" alt="" class="portfolio__img">
 
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Flixr Streaming</h3>
+                            <p class="portfolio__description">Introducing "Streamify React" - a cutting-edge streaming
+                                web app built with React. Enjoy a seamless streaming experience with a sleek user
+                                interface and a vast library of movies, TV shows, and music. Dive into endless
+                                entertainment at your fingertips.</p>
+                            <a href="https://flixr-six.vercel.app/"
+                                class="button button--flex button--small portfolio__button">
+                                demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--==================== PORTFOLIO 5====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/spotyfy.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Spotify Clone</h3>
+                            <p class="portfolio__description">
+                                Presenting "SpotiClone" - an innovative web app that mirrors the beloved features of
+                                Spotify. Discover and stream a vast collection of music from various genres, create
+                                personalized playlists, and experience a sleek, user-friendly interface that delivers an
+                                immersive music streaming experience. Indulge in the joy of music with SpotiClone, your
+                                ultimate Spotify clone web app.</p>
+                            <a href="https://spotify-clone-web-app-blush.vercel.app/"
+                                class="button button--flex button--small portfolio__button">
+                                demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/LOYVERSE.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">LOYVERSE POINT OF SALE</h3>
+                            <p class="portfolio__description">
+                                Introducing "MiniMarket" - a sleek and efficient e-commerce web app built with React.
+                                Experience seamless browsing, secure transactions, and a user-friendly interface while
+                                exploring a wide range of products. From easy product search to hassle-free checkout,
+                                MiniMarket provides a delightful shopping experience in a compact package.</p>
+                            <a href="https://loyverse-e-commernce.vercel.app/"
+                                class="button button--flex button--small portfolio__button">
+                                demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
 
                 <!--Add Arrows-->
                 <div class="swiper-button-next">
