--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="/assets/pdf/Paras Grover web developer resume 1 (1).pdf.pdf"
+                        <a download="" href="/assets/pdf/paras react js resume.pdf"
                             class="button button--flex">Download CV
                             <i class="uil uil-download-alt button__icon"></i>
                         </a>
@@ -494,8 +494,6 @@
                                     2018-2022
                                 </div>
                             </div>
-
-
                         </div>
 
                         <!--==================== QUALIFICATION 3====================-->
@@ -514,7 +512,6 @@
                                 <span class="qualification__rounder"></span>
                                 <!-- <span class="qualification__line"></span> -->
                             </div>
-
                         </div>
 
                         <!-- ==================== QUALIFICATION 4==================== -->
@@ -532,8 +529,6 @@
                                     2022-2023
                                 </div>
                             </div>
-
-
                         </div> -->
 
                         <!--==================== QUALIFICATION 5====================-->
