--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="/assets/pdf/paras react js resume.pdf"
-                            class="button button--flex">Download CV
+                        <a download="" href="/assets/pdf/Paras Grover React js developer resume.pdf" class="button button--flex">Download
+                            CV
                             <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
